--- a/visits-completed.html
+++ b/visits-completed.html
@@ -212,7 +212,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
@@ -236,7 +236,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
@@ -260,7 +260,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
@@ -284,7 +284,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
@@ -308,7 +308,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
@@ -332,7 +332,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </div>
                             </td>
-                            <td>هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
+                            <td class="text_td">هذا النص هو مثال لنص آخر يمكن ان يستبدل في نفس المساحة الخاصة بهذا النص من خلال مولد
                                 النص العربي هذا النص هو مثال لنص آخر</td>
                             <td>
                                 <a href="#" class="main-btn sec up mx-auto" download="Invoice File">
