--- a/surveys.html
+++ b/surveys.html
@@ -179,7 +179,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -191,7 +191,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -203,7 +203,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -215,7 +215,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -227,7 +227,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -239,7 +239,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -263,7 +263,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
@@ -287,7 +287,43 @@
                             <td class="ff-m">25/9/2022</td>
                             <td class="buttons justify-content-end">
                                 <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
-                                <a href="edit-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="ff-m">1</td>
+                            <td>استطلاع رأي</td>
+                            <td>منتجات</td>
+                            <td class="ff-m">25/9/2022</td>
+                            <td class="buttons justify-content-end">
+                                <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="ff-m">1</td>
+                            <td>استطلاع رأي</td>
+                            <td>منتجات</td>
+                            <td class="ff-m">25/9/2022</td>
+                            <td class="buttons justify-content-end">
+                                <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
+                                <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="ff-m">1</td>
+                            <td>استطلاع رأي</td>
+                            <td>منتجات</td>
+                            <td class="ff-m">25/9/2022</td>
+                            <td class="buttons justify-content-end">
+                                <a href="survey-detailes.html" class="main-btn sm m-transparent">عرض</a>
+                                <a href="add-surveys.html" class="main-btn sm sec up">تعديل</a>
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#deleteSurveys" class="main-btn sm red-transparent">حذف</a>
                             </td>
                         </tr>
